fix(mermaid): R8 mindmap canvas height clamp — mirror flowchart MAX_HEIGHT (ratchet no-infinite-stretch; 438->320)